(ocamllex Lexer)

(menhir
 (modules Grammar)
 (explain true)
 (flags --inspection --table --dump))

(library
 (name Forester_frontend)
 (public_name forester.frontend)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord))
 (libraries
  bwd
  forester.prelude
  forester.core
  forester.render
  menhirLib
  ocamlgraph
  eio_main
  str
  toml
  pure-html
  yuujinchou
  irmin
  irmin-fs.unix
  irmin-git.unix
  pretty_expressive))

(env
 (dev
  (flags
   (:standard -w -66-32-33-27-26))))
