(ocamllex Cli_lexer)

(menhir
 (modules Parser)
 (explain true)
 (flags --inspection --table --dump))

(library
 (name Forester_ui)
 (public_name forester.ui)
 (preprocess
   (pps ppx_deriving.show))
 (libraries
  bwd
  forester.prelude
  forester.core
  forester.render
  forester.frontend
  menhirLib
  irmin
  irmin-fs.unix
  irmin-git.unix
  unix
  linenoise))

(env
 (dev
  (flags
   (:standard -w -66-32-33-27-26))))
